--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@
 *.jar
 *.war
 *.ear
+
+# Eclipse Files #
+.settings/org.eclipse.m2e.core.prefs
+.settings/org.eclipse.m2e.core.prefs
+.project
+.classpath
